Changelog
=========

0.7 (unreleased)
----------------

- Use the same language of the parent for subobjects (LinguaPlone happy) [simahawk]
- Add option for re-using the same content types selected for generating subobjects [simahawk]
- Add option for generating images from http://fakeimg.pl/ [simahawk]

0.6 (2012-08-30)
----------------

- Add support for zope.schema.Bool fields as well as UserAndGroupSelectionWidget. [jcbrand]


0.5 (2012-08-17)
----------------

- Enable option to commit after each object is created. [jcbrand]
- Take note of max_length on text fields. [jcbrand]
- Use default values for fields if they exist. [jcbrand]


0.4 (2012-05-14)
----------------

- Update MANIFEST.in to include zcml and other non-python files. [jcbrand]


0.3 (2012-05-10)
----------------

- Add a unique Id generator. [jcbrand] 


0.2 (2012-02-14)
----------------

- Bugfix. README.rst was omitted from the egg. [jcbrand]


0.1 (2012-02-12)
----------------

- Initial release. [jcbrand]