@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<rolemap>
+  <permissions>
+    <!-- -*- extra stuff goes here -*- -->
+    <permission name="collective.loremipsum: Can Populate" acquire="True">
+      <role name="Manager" />
+      <role name="Site Administrator" />
+    </permission>
+    
+  </permissions>
+</rolemap>
