@@ -7,6 +7,8 @@ Changelog
 - Use the same language of the parent for subobjects (LinguaPlone happy) [simahawk]
 - Add option for re-using the same content types selected for generating subobjects [simahawk]
 - Add option for generating images from http://fakeimg.pl/ [simahawk]
+- Add specific permission 'collective.loremipsum: Can Populate' for limiting access to populate views.
+  By default only manager and site admin can do it. [simahawk]
 
 0.6 (2012-08-30)
 ----------------
